# barscan

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/barscan/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging.py
src/barscan/analyzer/: __init__.py  context.py  filters.py  frequency.py  models.py  nltk_resources.py  pos.py  processor.py  sentiment.py  slang.py  stopwords_ja.py  tfidf.py  tokenizer.py
src/barscan/genius/: __init__.py  cache.py  client.py  models.py
src/barscan/output/: __init__.py  wordgrain.py
tests/: __init__.py  test_main.py
tests/test_analyzer/: __init__.py  conftest.py  test_context.py  test_filters.py  test_frequency.py  test_models.py  test_pos.py  test_processor.py  test_sentiment.py  test_slang.py  test_tfidf.py  test_tokenizer.py
tests/test_cli/: conftest.py  test_commands.py
tests/test_genius/: __init__.py  conftest.py  test_cache.py  test_client.py  test_models.py
tests/test_output/: test_wordgrain.py
