[project]
name = "barscan"
version = "0.2.2"
description = "Lyrics word frequency analyzer using Genius API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "shimpeiws", email = "shimpeiws@gmail.com" }
]
keywords = ["lyrics", "genius", "word-frequency", "nlp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "lyricsgenius>=3.0.1",
    "typer[all]>=0.15.0",
    "rich>=13.7.0",
    "nltk>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/shimpeiws/barscan"
Repository = "https://github.com/shimpeiws/barscan.git"
Issues = "https://github.com/shimpeiws/barscan/issues"
Changelog = "https://github.com/shimpeiws/barscan/releases"
"WordGrain Schema" = "https://github.com/shimpeiws/word-grain"

[project.optional-dependencies]
japanese = ["janome>=0.5.0", "stopwordsiso>=0.6.1"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[project.scripts]
barscan = "barscan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/barscan"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "PTH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=barscan",
    "--cov-report=term-missing",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
